src/test/resources/cpp-code-examples/parseError/macro.c

AP_DECLARE(void) ap_regcomp_set_default_cflags(int cflags);